fix: footer not showing over background image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,22 +9,25 @@
 
 /* General styles */
 body {
+    background-color: #000000;
     width: 100%;
-    min-height: 100vh;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
-    color: #252525;
+    color: #ffffff;
+    margin: 0;
+    padding: 0;
+
 
 }
 
-
-*/ .hidden-heading {
-    /* TODO: for any hidden heading elements */
+/* Hidden heading */
+.hidden-heading {
     display: none;
 }
 
 header {
-    background-color: #000000;
+    background-color: #424242;
     padding: 0 1rem;
     position: fixed;
     z-index: 99;
@@ -53,7 +56,7 @@ header h1 {
 /* nav styles and dropdown */
 nav {
     position: absolute;
-    background-color: #000000;
+    background-color: #424242;
     width: 100%;
     left: 0;
     padding: 0 1rem;
@@ -68,11 +71,11 @@ nav ul>li {
 }
 
 /* Nav toggle */
-#nav-toggle:checked~nav {
+.nav-toggle:checked~nav {
     display: block;
 }
 
-#nav-toggle {
+.nav-toggle {
     display: none;
 }
 
@@ -80,7 +83,7 @@ nav ul>li {
     font-size: 2rem;
 }
 
-#nav-bar li>a {
+.nav-bar li>a {
     color: #ffffff;
 }
 
@@ -90,29 +93,45 @@ nav ul>li {
 }
 
 /* hero image styles */
-#hero {
+.hero {
+    position: absolute;
     background-color: #000000;
     background-image: url("../images/heroimage.jpg");
     width: 100%;
-    position: absolute;
     height: 1080px;
     background-size: cover;
     background-position: center;
-    margin-top: 0;
-
 }
 
 main {
-    flex: 1 0 auto;
-    margin-top: 47px;
+    flex: 1;
 }
-
 
 /* socials styles */
-#social {
-    display: flex;
-    flex-direction: row;
+footer {
+    background-color: #424242;
+    color: white;
+    text-align: center;
+    padding: 5px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
+
+.socials-networks {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 1rem;
+}
+
+.socials-networks>a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+
+
 
 
 /* Media query for phone devices nav-bar 576px and up*/
